--- a/public/playlist.css
+++ b/public/playlist.css
@@ -6,10 +6,11 @@ body {
 #result > div, #playlistContainer > div {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
+  border-bottom: 1px solid black;
+  /* margin-bottom: 1rem;
   padding: 0.5rem;
   border: 1px solid #ddd;
-  border-radius: 6px;
+  border-radius: 6px; */
 }
 
 #result img, #playlistContainer img {
@@ -30,17 +31,7 @@ body {
 
 
 button {
-  margin-left: 1rem;
-  padding: 0.4rem 0.8rem;
-  background: #1DB954;
-  color: white;
-  border: none;
-  border-radius: 4px;
   cursor: pointer;
-}
-
-button:hover {
-  background: #17a44c;
 }
 
 audio {
