--- a/public/tv.css
+++ b/public/tv.css
@@ -124,6 +124,11 @@ button:disabled {
     height: 1310px;
   }
 
+  #ascii {
+    display: block;
+     font-size: 36px;
+  }
+
   img {
     position: static;
   }
