android button fixed

--- a/public/playlist.css
+++ b/public/playlist.css
@@ -16,11 +16,9 @@ body {
   border-top: 1px solid black;
 }
 
-.Play-btns {
-  button {
-    background: none;
-    border: none;
-  }
+.Play-btns button {
+  background: none;
+  border: none;
 }
 
 
