--- a/public/font.css
+++ b/public/font.css
@@ -32,15 +32,23 @@
 
 /* text: default ================================================ */
 html,body {
-  font-family: Arial, sans-serif; 
-  font-size: 13px;
+  font-family: Menlo;
+  /* font-family: Arial, sans-serif;  */
+  font-size: 12px;
   color: #333;
 }
 
 
 button {
-  font-size: 13px;
+  font-size: 12px;
+  font-family: Menlo;
 }
+
+input[type="text" i] {
+  font-family: Menlo;
+  font-size: 12px;
+}
+
 
 a {
   text-decoration: none;
