--- a/public/tv.css
+++ b/public/tv.css
@@ -30,13 +30,19 @@ img {
 
 textarea {
   display: block;
-  width: 90%;
+  /* width: 90%; */
+  width: 210px;
   margin: 25px auto 15px auto;
   padding: 0;
   border: 0;
   font-size: 12px;
   text-align: center;
   resize: none;
+}
+
+textarea:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 h1 {
