--- a/public/playlist.css
+++ b/public/playlist.css
@@ -74,6 +74,12 @@ input[type="text" i] {
 
 button {
   cursor: pointer;
+  background: #fffacd;
+  color: #000000;
+  border: 1px solid #b1b1b1;
+  border-top: none;
+  border-bottom: none;
+  border-style: outset;
 }
 
 audio {
