--- a/public/playlist.css
+++ b/public/playlist.css
@@ -8,7 +8,7 @@
   grid-template-areas: 
     ". . . ."; 
   padding: 16px 12px;
-  border-top: 1px solid black;
+  /* border-top: 1px solid black; */
 }
 
 .Play-btns button {
