--- a/public/playlist.css
+++ b/public/playlist.css
@@ -1,21 +1,3 @@
-.Play-btns {
-  display: grid; 
-  grid-auto-columns: 1fr; 
-  grid-auto-rows: 1fr; 
-  grid-template-columns: auto auto 1fr auto auto;
-  grid-template-rows: 1fr; 
-  gap: 0px 10px; 
-  grid-template-areas: 
-    ". . . ."; 
-  padding: 16px 12px;
-  /* border-top: 1px solid black; */
-}
-
-.Play-btns button {
-  background: none;
-  border: none;
-}
-
 
 #playlistContainer {    
   overflow-x: hidden;
@@ -34,16 +16,17 @@ input[type="text" i] {
   top: 50%;
   left: 50%;
   width: 70%;
-  padding: 20px;
-  -webkit-transform: translate(-50%, -50%); /* Safari */
-  -moz-transform: translate(-50%, -50%); /* Firefox */
-  -ms-transform: translate(-50%, -50%); /* IE 9 */
-  -o-transform: translate(-50%, -50%); /* Opera */
+  padding: 19px 0 0 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   backdrop-filter: blur(10px);
+  border: 1px solid black;
 }
 
-#result > div, #playlistContainer > div {
+#playlistContainer > div {
   display: flex;
   align-items: center;
   border-bottom: 1px solid black;
@@ -53,28 +36,45 @@ input[type="text" i] {
   border-radius: 6px; */
 }
 
-#result img, #playlistContainer img {
+#result > div {
+  display: flex;
+  align-items: center;
+  border-top: 1px solid black;
+  /* margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 6px; */
+}
+
+.addBtn {
+  padding: 6px 9px 6px 6px;
+}
+
+/* #result img, #playlistContainer img {
   width: 64px;
   height: 64px;
   margin-right: 1rem;
   border-radius: 6px;
-}
+} */
 
 .track-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 0 12px;
   flex-grow: 1;
 }
 
+.track-item {
+  cursor: pointer;
+}
+
 .playing {
-  font-style: oblique;
+  font-family: Menlo-Italic;
   /* background-color: #a9a69d;  */
   /* border-left: 4px solid #1db954;  */
 }
 
-
-button {
-  cursor: pointer;
-}
 
 audio {
   margin-left: 1rem;
