--- a/public/index.css
+++ b/public/index.css
@@ -186,7 +186,7 @@ button {
 /* Playlist: List */
 /* ============================================================= */
 .deleteBtn {
-  display: none;
+  /* display: none; */
 }
 
 
