--- a/public/font.css
+++ b/public/font.css
@@ -45,7 +45,7 @@
 
 /* text: default ================================================ */
 html,body {
-  font-family: Menlo;
+  font-family: 'Menlo';
   /* font-family: Arial, sans-serif;  */
   font-size: 10px;
   color: #333;
@@ -54,6 +54,10 @@ html,body {
 button {
   font-size: 12px;
   font-family: Menlo;
+}
+
+button:disabled {
+  font-family: 'Menlo-Bold';
 }
 
 a {
