--- a/public/playlist.css
+++ b/public/playlist.css
@@ -13,6 +13,15 @@ input[type="text" i] {
 #result {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+
+#result-modal {
+  position: fixed;
   top: 50%;
   left: 50%;
   width: 70%;
@@ -25,6 +34,15 @@ input[type="text" i] {
   backdrop-filter: blur(10px);
   /* background: #fffbd4; */
   border: 1px solid black;
+  z-index: 2;
+}
+
+#result-bg {     
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #playlistContainer > div {
@@ -37,7 +55,7 @@ input[type="text" i] {
   border-radius: 6px; */
 }
 
-#result > div {
+#result > #result-modal > div {
   display: flex;
   align-items: center;
   justify-content: space-between;
