--- a/public/playlist.css
+++ b/public/playlist.css
@@ -91,7 +91,7 @@ input[type="text" i] {
 
 .playing {
   font-family: 'Menlo-Italic';
-  background-color: #a9a69d; 
+  /* background-color: #a9a69d;  */
   /* border-left: 4px solid #1db954;  */
 }
     
