--- a/public/index_media.css
+++ b/public/index_media.css
@@ -18,7 +18,8 @@
     top: 0;
     left: 0;
     /* width: 656px; */
-    width: 520px;
+    /* width: 520px; */
+    width: 490px;
     height: 10000px;
     /* height: 1310px; */
   }
