--- a/public/index_media.css
+++ b/public/index_media.css
@@ -19,7 +19,8 @@
     left: 0;
     /* width: 656px; */
     /* width: 520px; */
-    width: 490px;
+    width: 500px;
+    /* width: 490px; */
     height: 10000px;
     /* height: 1310px; */
   }
