--- a/public/playlist.css
+++ b/public/playlist.css
@@ -18,6 +18,7 @@ input[type="text" i] {
   width: 100%;
   height: 100%;
   z-index: 3;
+  overflow: hidden;
 }
 
 #result-modal {
@@ -31,7 +32,8 @@ input[type="text" i] {
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
+  background: lemonchiffon;
   /* background: #fffbd4; */
   border: 1px solid black;
   z-index: 2;
