--- a/public/playlist.css
+++ b/public/playlist.css
@@ -79,11 +79,14 @@ input[type="text" i] {
   border-radius: 6px;
 } */
 
+.track-info {
+  padding: 0 12px;
+}
+
 .track-item .track-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 12px;
   flex-grow: 1;
 }
 
