--- a/public/index_media.css
+++ b/public/index_media.css
@@ -47,13 +47,10 @@
     width: 100%;
     height: 10000px;
     margin: 25px 0 15px 0;
-    font-size: 33px;
-    line-height: 36px;
-  }
-
-  #ascii {
-    display: block;
-    font-size: 36px;
+    font-size: 29px;
+    line-height: 32px; 
+    /* font-size: 33px;
+    line-height: 36px; */
   }
 
 }
