--- a/public/index.css
+++ b/public/index.css
@@ -89,20 +89,34 @@ button {
 #note, textarea {
   display: block;
   /* width: 90%; */
-  width: 200px;
-  margin: 0 auto 0 auto;
-  padding: 19px 0 20px 0;
+  width: 228px;
+  margin: 0 auto 20px auto;
+  padding: 19px 0 0 0;
   border: 0;
   font-size: 13px;
   line-height: 16px;
   text-align: center;
   resize: none;
+  overflow: hidden;
 }
 
 #note, textarea:focus {
   outline: none;
   box-shadow: none;
 }
+
+/* #ascii {
+  display: none;
+  width: 100%;
+  height: 10000px;
+  margin: 0 auto 0 auto;
+  padding: 0;
+  border: 0;
+  font-size: 29px;
+  line-height: 32px; 
+  text-align: center;
+  resize: none;
+} */
 
 
 /* ============================================================= */
