--- a/public/index_media.css
+++ b/public/index_media.css
@@ -46,11 +46,15 @@
   #note, textarea {
     width: 100%;
     height: 10000px;
-    margin: 25px 0 15px 0;
+    margin: 25px 0 0 0;
+    padding: 0;
+    overflow: auto;
     font-size: 29px;
     line-height: 32px; 
-    /* font-size: 33px;
-    line-height: 36px; */
   }
+
+ /* .ascii {
+    display: block;
+  } */
 
 }
