android bg color

--- a/public/index.css
+++ b/public/index.css
@@ -9,7 +9,8 @@ html,body {
 
 body {
   /* background: lemonchiffon; */
-  background: #fff7b2;
+  /* background: #fff7b2; */
+  background: #fff388;
 }
 
 ::-webkit-scrollbar { 
