android bg color

--- a/public/index.css
+++ b/public/index.css
@@ -45,7 +45,8 @@ button {
     "."
     ".";
   /* background: lemonchiffon; */
-  background: #fff7b2;
+  /* background: #fff7b2; */
+  background: #fff388;
 }
 
 
