--- a/public/playlist.css
+++ b/public/playlist.css
@@ -33,7 +33,8 @@ input[type="text" i] {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   /* backdrop-filter: blur(10px); */
-  background: lemonchiffon;
+  /* background: lemonchiffon; */
+  background: #fff388;
   /* background: #fffbd4; */
   border: 1px solid black;
   z-index: 2;
