--- a/public/index.css
+++ b/public/index.css
@@ -46,8 +46,8 @@ button {
     ".";
   /* background: lemonchiffon; */
   /* background: #fff7b2; */
-  background: #fff6a5;
-  /* background: #fff388; */
+  /* background: #fff6a5; */
+  background: #fff388;
 }
 
 
